tests/integration/records/errors/quantified-constraint-incompatible/main.cx
fun g(a: {...: String}) {
}

fun f(a: {...: Number}) {
  g(a)
}

fun main() {}
